@@ -2,7 +2,7 @@
 //
 // Send an e-mail message using sendmail(1)
 //
-//   (C) Copyright 2020-2024 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2020-2025 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -17,7 +17,7 @@
 //   License along with this program; if not, write to the Free Software
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
-// EXEMPLAR_VERSION: 2.0.1
+// EXEMPLAR_VERSION: 2.0.2
 //
 
 #include <QObject>
